[Evo] #1586 - Link to Ozwillo account
 - Add Ozwillo link in config
 - Add Ozwillo color in css
 - Update file display
 - Remove firstname and lastname of user edition
 - Update user admin component
 - Update account, AvatarForm, SignatureForm components
 - Update user api endpoint
 - Update Entity form
 - Improve translations

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -123,6 +123,7 @@ parameters:
     majorversion: 4
 #    url_applet: signature.sesile.fr
     url_applet: signature.dev.sesile.fr
+    ozwillo_portal: portal.ozwillo-preprod.eu
     ovh_credential:
         application: ***REMOVED***
         secret: ***REMOVED***
