[Evo] ref #3323 - classeurs preview before signature
- Display cabinet when user click on signing button (for one and several classeurs)
- Create classeurs preview component
- Add empty default value in Button component
- Add edit propertie in OnlyOffice component
- #2712 Integration of onlyoffice in docker compose file 
- Fix route conflict with old classeur controller

--- a/docker-symfony/docker-compose.yml
+++ b/docker-symfony/docker-compose.yml
@@ -40,3 +40,12 @@ services:
             image: phpmyadmin/phpmyadmin
             ports:
                 - "8080:80"
+    onlyoffice:
+            image: onlyoffice/documentserver:latest
+            ports:
+                - 8081:80
+            stdin_open: true
+            volumes:
+                - ./logs/onlyoffice/logs:/var/log/onlyoffice
+                - ./.data/onlyoffice/data:/var/www/onlyoffice/Data
+                - ./.data/onlyoffice/lib:/var/lib/onlyoffice
