[Evo] #2159 - Create instance from Ozwillo
 - Add Stof bundle for slug
 - Add Ozwillo secret in config
 - New api for create and update collectivite from ozwillo
 - Update Collectivite entity
 - Update User entity
 - Add CollectiviteOzwillo entity
 - Remove useless Collectivite Form

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,6 +39,12 @@ twig:
         only_office_url: 'https://office.sictiam.fr/web-apps/apps/api/documents/api.js'
     exception_controller: 'FOS\RestBundle\Controller\ExceptionController::showAction'
 
+stof_doctrine_extensions:
+    default_locale: fr
+    orm:
+        default:
+            sluggable: true
+
 # Assetic Configuration
 assetic:
     debug:          '%kernel.debug%'
