--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "nelmio/api-doc-bundle": "@stable",
         "jms-serializer/serializer-bundle": "^1.1",
         "besimple/sso-auth-bundle": "@dev",
-        "setasign/setapdf-stamper": "2.24.0.1049"
+        "setasign/setapdf-stamper": "2.24.0.1049",
+        "stof/doctrine-extensions-bundle": "^1.3"
     },
     "repositories": [
         {
