--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -6,9 +6,14 @@ parameters:
     database_name: sesile-react
     database_user: root
     database_password: sictiam
+    database_driver_test: pdo_mysql
+    database_host_test: db
+    database_port_test: 3306
+    database_name_test: sesile-test
+    database_user_test: root
+    database_password_test: sictiam
     mailer_transport: smtp
     mailer_host: ***REMOVED***
-    mailer_port: 25
     mailer_user: null
     mailer_password: null
     locale: fr
