--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,15 +1,20 @@
+# This file is auto-generated during the composer install
 parameters:
-    database_driver:   pdo_mysql
-    database_host:     127.0.0.1
-    database_port:     ~
-    database_name:     symfony
-    database_user:     root
-    database_password: ~
-
-    mailer_transport:  smtp
-    mailer_host:       127.0.0.1
-    mailer_user:       ~
-    mailer_password:   ~
-
-    locale:            en
-    secret:            ThisTokenIsNotSoSecretChangeIt
+    database_driver: pdo_mysql
+    database_host: db
+    database_port: 3306
+    database_name: sesile-react
+    database_user: root
+    database_password: sictiam
+    database_driver_test: pdo_mysql
+    database_host_test: db
+    database_port_test: 3306
+    database_name_test: sesile-test
+    database_user_test: root
+    database_password_test: sictiam
+    mailer_transport: smtp
+    mailer_host: ***REMOVED***
+    mailer_user: null
+    mailer_password: null
+    locale: fr
+    secret: ThisTokenIsNotSoSecretChangeIt
