--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,9 @@
     ],
     "require-dev": {
         "sensio/generator-bundle": "~3.1",
-        "symfony/phpunit-bridge": "~3.2"
+        "symfony/phpunit-bridge": "~3.2",
+        "liip/functional-test-bundle": "~1.9.5",
+        "phpunit/phpunit": "6.5.8"
     },
     "scripts": {
         "post-install-cmd": [
