--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
         "symfony/symfony": "3.3.*",
         "doctrine/orm": "^2.5.6",
         "doctrine/doctrine-bundle": "~1.6",
-        "doctrine/doctrine-fixtures-bundle": "2.3",
         "doctrine/doctrine-migrations-bundle": "^1.2",
         "twig/extensions": "~1.5",
         "symfony/assetic-bundle": "~2.8",
@@ -46,7 +45,8 @@
         "sensio/generator-bundle": "~3.1",
         "symfony/phpunit-bridge": "~3.2",
         "liip/functional-test-bundle": "~1.9.5",
-        "phpunit/phpunit": "6.5.8"
+        "phpunit/phpunit": "6.5.8",
+        "doctrine/doctrine-fixtures-bundle": "^3.0"
     },
     "scripts": {
         "post-install-cmd": [
