--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -5,6 +5,12 @@ parameters:
     database_name:     symfony
     database_user:     root
     database_password: ~
+    database_driver_test: pdo_mysql
+    database_host_test: db
+    database_port_test: 3306
+    database_name_test: sesile-test
+    database_user_test: root
+    database_password_test: sictiam
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
