--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -123,7 +123,7 @@ parameters:
         application: ***REMOVED***
         secret: ***REMOVED***
         consumer_key: ***REMOVED***
-
+    hwi_oauth.authentication.provider.oauth.class: Sesile\UserBundle\Security\OAuthProvider
 # La suite, c'est pour l'api
 fos_rest:
     serializer:
