[Evo] ref #3927 - Select collectivite
- Add alternative font family in css file 
- Make body background in gray
- #3931 Manage user redirection
- Add page selection collectivite
- Modif docker config nginx (wildcard)

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -40,6 +40,7 @@ hwi_oauth:
             infos_url:           https://accounts.ozwillo-preprod.eu/a/userinfo
 
 parameters:
+    domain: sesile-dev.local
     upload:
         path: '%kernel.root_dir%/../web/uploads/avatars/'
         signatures: '%kernel.root_dir%/../web/uploads/signatures/'
