--- a/docker-symfony/nginx/symfony.conf
+++ b/docker-symfony/nginx/symfony.conf
@@ -1,5 +1,5 @@
 server {
-    server_name symfony.dev;
+    server_name ~^(.*)\.sesile-dev.\.local$ ;
     root /var/www/symfony/web;
 
     location / {
