--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -56,20 +56,35 @@ assetic:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   '%database_driver%'
-        host:     '%database_host%'
-        port:     '%database_port%'
-        dbname:   '%database_name%'
-        user:     '%database_user%'
-        password: '%database_password%'
-        charset:  UTF8
-        # if using pdo_sqlite as your database driver, add the path in parameters.yml
-        # e.g. database_path: %kernel.root_dir%/data/data.db3
-        # path:     %database_path%
+        default_connection: default
+        connections:
+            default:
+                driver:   '%database_driver%'
+                host:     '%database_host%'
+                port:     '%database_port%'
+                dbname:   '%database_name%'
+                user:     '%database_user%'
+                password: '%database_password%'
+                charset:  UTF8
+                # if using pdo_sqlite as your database driver, add the path in parameters.yml
+                # e.g. database_path: %kernel.root_dir%/data/data.db3
+                # path:     %database_path%
+            legacy:
+                driver:   '%database_driver_legacy%'
+                host:     '%database_host_legacy%'
+                port:     '%database_port_legacy%'
+                dbname:   '%database_name_legacy%'
+                user:     '%database_user_legacy%'
+                password: '%database_password_legacy%'
+                charset:  UTF8
 
     orm:
+        default_entity_manager: default
         auto_generate_proxy_classes: '%kernel.debug%'
-        auto_mapping: true
+        entity_managers:
+            default:
+                connection: default
+                auto_mapping: true
 
 # Ozwillo Oauth2
 hwi_oauth:
