--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -26,13 +26,27 @@ web_profiler:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   '%database_driver_test%'
-        host:     '%database_host_test%'
-        port:     '%database_port_test%'
-        dbname:   '%database_name_test%'
-        user:     '%database_user_test%'
-        password: '%database_password_test%'
-        charset:  UTF8
+        default_connection: default
+        connections:
+            default:
+                driver:   '%database_driver_test%'
+                host:     '%database_host_test%'
+                port:     '%database_port_test%'
+                dbname:   '%database_name_test%'
+                user:     '%database_user_test%'
+                password: '%database_password_test%'
+                charset:  UTF8
+                # if using pdo_sqlite as your database driver, add the path in parameters.yml
+                # e.g. database_path: %kernel.root_dir%/data/data.db3
+                # path:     %database_path%
+            legacy:
+                driver:   '%database_driver_legacy%'
+                host:     '%database_host_legacy%'
+                port:     '%database_port_legacy%'
+                dbname:   '%database_name_legacy%-test'
+                user:     '%database_user_legacy%'
+                password: '%database_password_legacy%'
+                charset:  UTF8
 
 liip_functional_test: ~
 
