--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -12,6 +12,12 @@ parameters:
     database_name_test: sesile-test
     database_user_test: root
     database_password_test: sictiam
+    database_driver_legacy: pdo_mysql
+    database_host_legacy: db
+    database_port_legacy: 3306
+    database_name_legacy: sesile-legacy
+    database_user_legacy: root
+    database_password_legacy: sictiam
     mailer_transport: smtp
     mailer_host: ***REMOVED***
     mailer_user: null
