[EVO] ref #4184 create new migration bundle with new service for legacy colelctivity list

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -66,6 +66,10 @@ sesile_api:
     type:     annotation
     prefix:   /api/
 
+sesile_migration:
+    resource: "@SesileMigrationBundle/Controller/"
+    type:     annotation
+
 #sesile_delegations:
 #    resource: "@SesileDelegationsBundle/Controller/"
 #    type:     annotation
