[EVO] ref #4183 added collectivity migrator class and service with test

--- a/src/Sesile/MigrationBundle/Resources/config/services.yml
+++ b/src/Sesile/MigrationBundle/Resources/config/services.yml
@@ -5,3 +5,8 @@ services:
     legacy.collectivity.service:
         class: Sesile\MigrationBundle\Service\LegacyCollectivityService
         arguments: ["@doctrine.dbal.legacy_connection"]
+    collectivity.migrator:
+        class: Sesile\MigrationBundle\Migrator\CollectivityMigrator
+        arguments: ["@legacy.collectivity.service", "@collectivite.manager", "@logger"]
+        tags:
+            - { name: monolog.logger, channel: migrator }
