[EVO] ref #3928 ADD legacy user service with tests

--- a/src/Sesile/MigrationBundle/Resources/config/services.yml
+++ b/src/Sesile/MigrationBundle/Resources/config/services.yml
@@ -5,6 +5,9 @@ services:
     legacy.collectivity.service:
         class: Sesile\MigrationBundle\Service\LegacyCollectivityService
         arguments: ["@doctrine.dbal.legacy_connection"]
+    legacy.user.service:
+        class: Sesile\MigrationBundle\Service\LegacyUserService
+        arguments: ["@doctrine.dbal.legacy_connection"]
     collectivity.migrator:
         class: Sesile\MigrationBundle\Migrator\CollectivityMigrator
         arguments: ["@legacy.collectivity.service", "@collectivite.manager", "@logger"]
