[EVO] ref #3928 User migrator service with tests

--- a/src/Sesile/MigrationBundle/Resources/config/services.yml
+++ b/src/Sesile/MigrationBundle/Resources/config/services.yml
@@ -13,3 +13,8 @@ services:
         arguments: ["@legacy.collectivity.service", "@collectivite.manager", "@logger"]
         tags:
             - { name: monolog.logger, channel: migrator }
+    user.migrator:
+        class: Sesile\MigrationBundle\Migrator\UserMigrator
+        arguments: ["@legacy.user.service", "@fos_user.user_manager", "@logger"]
+        tags:
+            - { name: monolog.logger, channel: migrator }
