--- a/src/Sesile/MigrationBundle/Resources/config/services.yml
+++ b/src/Sesile/MigrationBundle/Resources/config/services.yml
@@ -2,6 +2,9 @@ services:
     legacy.collectivity.manager:
         class: Sesile\MigrationBundle\Manager\LegacyCollectivityManager
         arguments: ["@legacy.collectivity.service", "@logger"]
+    sesile_migration.manager:
+        class: Sesile\MigrationBundle\Manager\SesileMigrationManager
+        arguments: ["@doctrine.orm.default_entity_manager", "@logger"]
     legacy.collectivity.service:
         class: Sesile\MigrationBundle\Service\LegacyCollectivityService
         arguments: ["@doctrine.dbal.legacy_connection"]
