--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -193,6 +193,9 @@ sensio_framework_extra:
     router:  { annotations: true }
     request: { converters: true }
 
+sesile_migration:
+    ozwillo_user_gateway: "%ozwillo_user_gateway_uri%"
+
 services:
     my.sesile.user_provider:
         autowire: true
