--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -24,3 +24,4 @@ parameters:
     mailer_password: null
     locale: fr
     secret: ThisTokenIsNotSoSecretChangeIt
+    ozwillo_user_gateway_uri: "http://usergateway.ozwillo-preprod.eu"
