--- a/src/Sesile/MigrationBundle/Resources/config/services.yml
+++ b/src/Sesile/MigrationBundle/Resources/config/services.yml
@@ -26,3 +26,5 @@ services:
         arguments: ["@legacy.user.service", "@fos_user.user_manager", "@logger"]
         tags:
             - { name: monolog.logger, channel: migrator }
+    guzzle.client:
+        class: GuzzleHttp\Client
