[EVO] ref #4181 add new SesileMailer manager with service definition and test

--- a/src/Sesile/MainBundle/Resources/config/services.yml
+++ b/src/Sesile/MainBundle/Resources/config/services.yml
@@ -5,3 +5,12 @@ services:
         arguments:
             - '@doctrine.orm.entity_manager'
             - '@logger'
+    sesile.mailer:
+        class: Sesile\MainBundle\Manager\SesileMailer
+        autowire: false
+        arguments:
+            - '@mailer'
+            - '@templating'
+            - '%domain%'
+            - '%email_sender_address%'
+            - '@logger'
