--- a/docker-symfony/docker-compose.yml
+++ b/docker-symfony/docker-compose.yml
@@ -10,6 +10,7 @@ services:
             MYSQL_DATABASE: ${MYSQL_DATABASE}
             MYSQL_USER: ${MYSQL_USER}
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+            MAX_CONNECTIONS: 300
     php:
         build:
             context: php7-fpm
