--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -56,27 +56,13 @@ assetic:
 # Doctrine Configuration
 doctrine:
     dbal:
-        default_connection: default
-        connections:
-            default:
-                driver:   '%database_driver%'
-                host:     '%database_host%'
-                port:     '%database_port%'
-                dbname:   '%database_name%'
-                user:     '%database_user%'
-                password: '%database_password%'
-                charset:  UTF8
-                # if using pdo_sqlite as your database driver, add the path in parameters.yml
-                # e.g. database_path: %kernel.root_dir%/data/data.db3
-                # path:     %database_path%
-            legacy:
-                driver:   '%database_driver_legacy%'
-                host:     '%database_host_legacy%'
-                port:     '%database_port_legacy%'
-                dbname:   '%database_name_legacy%'
-                user:     '%database_user_legacy%'
-                password: '%database_password_legacy%'
-                charset:  UTF8
+        driver:   '%database_driver%'
+        host:     '%database_host%'
+        port:     '%database_port%'
+        dbname:   '%database_name%'
+        user:     '%database_user%'
+        password: '%database_password%'
+        charset:  UTF8
 
     orm:
         default_entity_manager: default
@@ -115,7 +101,7 @@ fos_user:
         sender_name: SESILE
 
 parameters:
-    domain: sesile.fr
+    domain: '%sesile_domain%'
     informations:
         version: 4.0-sprint11
         contact_link: http://support.sictiam.fr/declarer-un-incident/
