--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -45,7 +45,7 @@ hwi_oauth:
             infos_url:           https://accounts.ozwillo-preprod.eu/a/userinfo
 
 parameters:
-    domain: sesile-dev.local
+    domain: '%sesile_domain%'
     upload:
         path: '%kernel.root_dir%/../web/uploads/avatars/'
         signatures: '%kernel.root_dir%/../web/uploads/signatures/'
