--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -26,38 +26,17 @@ web_profiler:
 # Doctrine Configuration
 doctrine:
     dbal:
-        default_connection: default
-        connections:
-            default:
-                driver:   '%database_driver_test%'
-                host:     '%database_host_test%'
-                port:     '%database_port_test%'
-                dbname:   '%database_name_test%'
-                user:     '%database_user_test%'
-                password: '%database_password_test%'
-                charset:  UTF8
-                # if using pdo_sqlite as your database driver, add the path in parameters.yml
-                # e.g. database_path: %kernel.root_dir%/data/data.db3
-                # path:     %database_path%
-            legacy:
-                driver:   '%database_driver_legacy%'
-                host:     '%database_host_legacy%'
-                port:     '%database_port_legacy%'
-                dbname:   '%database_name_legacy%-test'
-                user:     '%database_user_legacy%'
-                password: '%database_password_legacy%'
-                charset:  UTF8
+        driver:   '%database_driver%'
+        host:     '%database_host%'
+        port:     '%database_port%'
+        dbname:   '%database_name%-test'
+        user:     '%database_user%'
+        password: '%database_password%'
 
 liip_functional_test: ~
 
 swiftmailer:
     disable_delivery: true
 parameters:
-    domain: sesile.fr
-    database_driver: pdo_mysql
-    database_host: '%database_host_test%'
-    database_port: null
-    database_name: '%database_name_test%'
-    database_user: '%database_user_test%'
-    database_password: '%database_password_test%'
+    domain: '%sesile_domain%'
     secret: ***REMOVED***
