[Fix] gitignore all data file of docker

--- a/.gitignore
+++ b/.gitignore
@@ -65,5 +65,5 @@ app/SymfonyRequirements\.php
 
 # Docker
 /docker-symfony/logs
-/docker-symfony/.data
+/docker-symfony/.data*
 /docker-symfony/.env
