--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,3 +17,4 @@ parameters:
     ozwillo_user_gateway_username: admin
     ozwillo_user_gateway_password: ***REMOVED***
     contact_email: demat@sictiam.fr
+    ozwillo_secret: ***REMOVED***
