--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,3 +23,4 @@ parameters:
     ozwillo_client_secret: ***REMOVED***
     contact_email: demat@sictiam.fr
     ozwillo_secret: ***REMOVED***
+    only_office_url: 'https://office.sictiam.fr/web-apps/apps/api/documents/api.js'
