--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -18,6 +18,7 @@ parameters:
     ozwillo_user_gateway_password: ***REMOVED***
     ozwillo_access_token_url: 'https://accounts.ozwillo-preprod.eu/a/token'
     ozwillo_authorization_url: 'https://accounts.ozwillo-preprod.eu/a/auth'
+    ozwillo_acl_instance_url: 'https://kernel.ozwillo-preprod.eu/apps/acl/instance'
     ozwillo_infos_url: 'https://accounts.ozwillo-preprod.eu/a/userinfo'
     ozwillo_client_id: 2e771747-f906-4125-ba96-806553bc2ce2
     ozwillo_client_secret: ***REMOVED***
