--- a/docker-symfony/php7-fpm/Dockerfile
+++ b/docker-symfony/php7-fpm/Dockerfile
@@ -8,7 +8,9 @@ RUN apt-get update && apt-get install -y \
     openssl \
     git \
     unzip \
-    cron
+    cron \
+    libmagickwand-dev \
+    imagemagick
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -36,6 +38,9 @@ RUN echo "xdebug.remote_connect_back=1" >> /usr/local/etc/php/conf.d/docker-php-
 RUN echo "xdebug.idekey=\"PHPSTORM\"" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 RUN echo "xdebug.remote_port=9001" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
+# ImageMagic
+RUN pecl install imagick
+RUN docker-php-ext-enable imagick
 
 RUN echo 'alias sf="php app/console"' >> ~/.bashrc
 RUN echo 'alias sf3="php bin/console"' >> ~/.bashrc
