[Evo] Ref #4901 - Redirect to the target url after login

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -76,6 +76,7 @@ doctrine:
 # Ozwillo Oauth2
 hwi_oauth:
     firewall_names: [secured_area]
+    use_referer: true
     resource_owners:
         ozwillo:
             type:                ozwillo
