--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -3,6 +3,7 @@ imports:
 
 hwi_oauth:
     firewall_names: [secured_area]
+    use_referer: true
     resource_owners:
         ozwillo:
             type:                ozwillo
