--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "jms-serializer/serializer-bundle": "1.1.1",
         "setasign/setapdf-stamper": "2.24.0.1049",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "hwi/oauth-bundle": "dev-add-ozwillo-connection",
+        "hwi/oauth-bundle": "dev-add-ozwillo-connection#9fbb81628deffc4bd34f3ec72b116321ca45d9fb",
         "php-http/guzzle6-adapter": "^1.1",
         "php-http/httplug-bundle": "^1.9"
     },
