[Evo] Ref #4884 -  Configuration of sending logs on logstash
- Add gelf-php bundle for sending log to logstash
- Update oauth bundle to last commit in `dev-add-ozwillo-connection` branch 
- Add log production config

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -52,3 +52,9 @@ monolog:
             path:  '%kernel.logs_dir%/migrator-%kernel.environment%.log'
             level: info
             channels: ['!security', '!doctrine']
+        logstash:
+            type: gelf
+            publisher:
+                hostname: ***REMOVED***
+                port: 12201
+            formatter: monolog.formatter.gelf_message
