--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "stof/doctrine-extensions-bundle": "^1.3",
         "hwi/oauth-bundle": "dev-add-ozwillo-connection#9fbb81628deffc4bd34f3ec72b116321ca45d9fb",
         "php-http/guzzle6-adapter": "^1.1",
-        "php-http/httplug-bundle": "^1.9"
+        "php-http/httplug-bundle": "^1.9",
+        "graylog2/gelf-php": "^1.5"
     },
     "repositories": [
         {
