[FIx] Ref #5025 - Add subdomain in mail notification links

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -215,3 +215,4 @@ services:
         arguments:
             $fromEmail: '%email_sender_address%'
             $paths: '%upload%'
+            $domain: '%domain%'
